objects/copado__Scheduled_Job_Run__c.object
<CustomObject>
    <fields>
        <fullName>copado__Called_URL__c</fullName>
        <inlineHelpText>If you have turned on the Mask API Key setting you will see a placeholder {USER_API_KEY} instead of your user&apos;s API Key after the api_key parameter</inlineHelpText>
        <label>Called URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copado__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Run_as_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Run as User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scheduled_Job_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Scheduled_Job__c</fullName>
        <label>Scheduled Job</label>
        <referenceTo>copado__Scheduled_Job__c</referenceTo>
        <relationshipLabel>Scheduled Job Runs</relationshipLabel>
        <relationshipName>Scheduled_Job_Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>